src/style.css
/* ... */
.tooltip-metric-content {
    line-height: 0.8rem;
    margin-top: 8px;
    margin-bottom: 8px;
}

.tooltip-metric-header {

}

.tooltip-columns {
    display: flex;
    gap: 25px;
}

.tooltip-column {
    flex: 1;
}

.tooltip-section {

}

.tooltip-sub-section {
    background-color: #403C53;
    border: 1px solid black;
    border-radius: 5px;
    color: white;
    padding: 1px 4px;
    margin-bottom: 4px !important;
}

.tooltip-description {
    margin: 1px;
}

.tooltip-dummy-buttons {
    background-color: #403C53;
    border: 1px solid black;
    border-radius: 5px;
    color: white;
    padding-left: 4px;
    padding-right: 4px;
}

.tooltip-dummy-buttons.red {
    background-color: #C33D35;
    color: white;
}

.tooltip-dummy-buttons.blue {
    background-color: #8CA6D9;
    color: black;
}

.tooltip-dummy-buttons.pink {
    background-color: #EFB0AA;
    color: black;
}

.tooltip-dummy-buttons.green {
    background-color: #015C0C;
    color: white;
}

.black {
    color: #000000;
}

.brown {
    color: #773901;
    border: 1px solid #773901;
}

.green {
    color: #015C0C;
}

.grey {
    color: #878996;
}

.orange {
    color: #E57B3C;
}

.dark-orange {
    color: #e7671f;
}

.red {
    color: #C33D35;
}

.red-background {
    background-color: #C33D35;
}

.white {
    color: white;
}

.red-border {
    border: 1px solid #C33D35 !important;
    border-radius: 3px;
}

.purple {
    color: #403C53;
}

.purple-border {
    border: 1px solid #403C53 !important;
    border-radius: 3px;
}

.round-border {
    border-radius: 3px;
}

.no-border {
    border: none !important;
}

.no-background {
    background: none;
}

.tiny-btn {
    width: 14px;
    height: 14px;
    text-align: center;
    line-height: 14px;
    font-size: 12px;
    border: 1px solid black;
    border-radius: 3px;
    cursor: pointer;
    padding: 0;
}

.small-btn {
    width: 18px;
    height: 18px;
    text-align: center;
    line-height: 16px;
    font-size: 13px;
    border: 1px solid black;
    border-radius: 3px;
    cursor: pointer;
    padding: 0;
    transition: box-shadow 0.2s ease-in-out;
    display: inline-flex;
    align-items: center;
    justify-content: center;
}

.medium-btn {
    width: 22px;
    height: 22px;
    font-size: 14px;
    line-height: 22px;
    padding: 0;
    display: inline-flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    border: 1px solid transparent;
    background: transparent;
}

.medium-btn:hover {

    background: #C33D3580;
    border: 1px solid #C33D35;
    border-radius: 6px;
}

.header-row {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-top: 0.6em;
    margin-bottom: 0.6em;
}

.header-row h3 {
    margin: 0;
}

.button-group {
    display: inline-flex;
    background: #403C5320;
    outline: 1px solid #403C53;
    border-radius: 6px;
    margin-right: 6px;
    gap: 1px;
}

.button-separator {
    display: inline-block;
    width: 1px;
    height: 1.2rem;
    background-color: #403C53;
    margin: 0 0.1em;
    vertical-align: middle;
}

.info-btn {
    height: 18px;
    width: 18px;
    cursor: pointer;
    border: none;
    padding: 0;
    line-height: 18px;
    font-size: 18px;
    color: #588ae5;
    transition: color 0.2s ease-in-out;
}

.info-btn:hover {
    color: #C33D35;
}

.toggle-section-btn {
    background: #E4E3EA;
}

.toggle-section-btn:hover {
    border-color: #C33D35;
    color: #C33D35;
}

.small-btn.red:hover {
    border: 1px solid #403C53 !important;
}

.small-text {
    font-size: 12px;
    line-height: 19px;
}

.extra-small {
    width: 14px;
    height: 14px;
    line-height: 14px;
    font-size: 10px;
}

.mr {
    margin-right: 4px;
}

.hidden {
    opacity: 0;
    pointer-events: none;
}

.disabled {
    opacity: 0.5;
    pointer-events: none;
    color: black;
    cursor: default;
}

.showOnLoad {
    opacity: 0;
    pointer-events: none;
}

.hideOnLoad {
    opacity: 1;
    pointer-events: auto;
    height: auto;
}

.disabled-header {
    cursor: default !important;
    pointer-events: none;
}

#appHeader:not(.disabled-header) {
    cursor: pointer;
}

#appHeader.compact-header {
    font-size: 1.0em;
}

/*************************
 custom checkbox style
 **************************/

.checkboxWrapper {
    display: inline-flex;
    align-items: center;
    gap: 4px;
    cursor: pointer;
}

.checkboxContainer {
    display: flex;
    align-items: center;
}


.checkboxLabel {
    padding-left: 2px;
    flex-grow: 1;
    font-size: 12px;
}

.checkbox {
    display: inline-block;
    width: 14px;
    height: 14px;
    position: relative;
    text-align: center;
    line-height: 12px;
    font-size: 12px;
    font-family: sans-serif;
    flex-shrink: 0;
    box-sizing: border-box;
}

.add-to-query-button {
    padding: 0;
    width: 0;
    height: 14px;
    font-size: 10px;
    border: 1px solid #403C53;
    border-radius: 3px;
    background: transparent;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-left: 0;
    box-sizing:border-box;
    opacity: 0;
    pointer-events: none;
    transition: opacity 0.2s ease-in-out, width 0.2s ease-in-out, margin 0.2s ease-in-out;
}

.add-to-query-button.show {
    opacity: 1;
    pointer-events: auto;
    width: 14px;
    margin-left: 1px;
}

.add-to-query-button.show.tt {
    display: inline-flex;
    width: 18px;
    height: 18px;
    pointer-events: none;
}

.add-to-query-button:hover {
    background: rgba(0, 0, 0, 0.1);
    border-radius: 3px;
}


.checkbox-red,
.checkbox-green {
    color: #C33D35;
    border: 1px solid #C33D35;
    border-radius: 3px;
}

.checkbox-red:hover,
.checkbox-green:hover {
    border-color: black;
}

input:checked + .checkbox-green {
    color: #015C0C;
    border-color: #015C0C;
}

input:checked + .checkbox-green::after {
    color: #015C0C;
}

input:checked + .checkbox-red::after {
    color: #C33D35;
}
/* ... */

